@@ -11,6 +11,9 @@ maps
 README
 t/0.t
 t/1.t
+t/ClutterGroup.t
+t/ClutterLabel.t
+t/ClutterRectangle.t
 t/ClutterStage.t
 xs/Clutter.xs
 xs/ClutterActor.xs
